# propertyai

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile_default  README.md  better_llm_interface.py  compose.yml  main.py  pyproject.toml  read_yaml.py
.github/workflows/: ci.yaml  tests.yaml
skill_generation/: llm_providers.py  main.py
src/: config.py  interfaces.py  main.py  schemas.py  utils.py
src/agents/: agent_runner.py  planning_agent.py  property_agent.py  speaking_agent.py
src/common/: dense_encoder.py  sparse_encoder.py
src/db/: schemas.py
src/llm/: llm.py  llm_models.py
src/llm/providers/: anthropic_provider.py  openai_provider.py
src/prompts/: planning_agent_prompt.md  prompt_store.py  property_agent_prompt.md  speaking_agent_prompt.md
src/routers/: etl_router.py  query_router.py
src/services/: add_document.py  agent_orchestrator.py  transcribe_document.py  vectorise_dense.py  vectorise_sparse.py
src/tools/: document_tool.py
tests/: confest.py  test_property_agent.py  test_providers.py
